--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 ALLOW_ORIGIN=*
 
 PORT=3031
+
+
+DB_USERNAME=darsh
+DB_PASSWORD=Darsh@123
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=backend_practice
